--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "GameJam Game 20260130.sln"
+    "dotnet.defaultSolution": "GameJam-Game-20260130.sln"
 }
